Petit boulot du soir

--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
 	</head>
 	<body>
 		<div class="content">
-			<h1 class="test1_title">Visionae</h1>
-			<div class="text">
-				<p class="test1_text">Visionae est une <b style="color: white;">startup de création d’expériences numériques</b>.
-				Nous introduisons des expériences numériques, dans des monuments historiques, grâce à de la réalité augmentée. Nous avons décidé de travailler avec la technologie de la RA pour mettre en valeur l'existant. En effet, nous avons conscience que chaque lieu doit garder son âme et ne doit pas se faire submerger par la technologie.
-				</p>
+			<div class="test1">
+				<h1 class="test1_title">Visionae</h1>
+				<div class="text">
+					<p class="test1_text">Visionae est une <b style="color: white; font-size: 1.1em;">startup de création d’expériences numériques</b>.
+						Nous introduisons des expériences numériques, dans des monuments historiques, grâce à de la réalité augmentée. Nous avons décidé de travailler avec la technologie de la RA pour mettre en valeur l'existant. En effet,nous avons conscience que chaque lieu doit garder son âme et ne doit pas se faire submerger par la technologie.
+					</p>
+				</div>
 			</div>
-			<h1 class="test2_title">VISIONAE</h1>
-			<div class="text">
-				<p class="test2_text">Visionae est une startup de création d’expériences numériques.
-				Nous introduisons des expériences numériques, dans des monuments historiques, grâce à de la réalité augmentée. Nous avons décidé de travailler avec la technologie de la RA pour mettre en valeur l'existant. En effet, nous avons conscience que chaque lieu doit garder son âme et ne doit pas se faire submerger par la technologie.
-				</p>
+			<div class="test1">
+				<h1 class="test2_title">VISIONAE</h1>
+				<div class="text">
+					<p class="test2_text">Visionae est une startup de création d’expériences numériques.
+					Nous introduisons des expériences numériques, dans des monuments historiques, grâce à de la réalité augmentée. Nous avons décidé de travailler avec la technologie de la RA pour mettre en valeur l'existant. En effet, nous avons conscience que chaque lieu doit garder son âme et ne doit pas se faire submerger par la technologie.
+					</p>
+				</div>
 			</div>
 		</div>
 	</body>
