Je sais pas ce que c'est

--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
 			<div class="test" style="position: absolute; margin-top:70%; margin-left: 40px;">
 				<h1 class="test4_title" style=" font-weight: bold; margin-left: 60px; font-family: 'Montserrat', sans-serif; font-style: 900; font-size: 5em; color: white; margin-top: 300px;" onclick="italic(this)">VISIONAE</h1>
 				<div class="text" style="width:50%;">
-					<p class="test4_title" style="font-weight: bold; font-family: 'Montserrat', sans-serif; font-size: 1.3em;"><br>Visionae est une startup de création d’expériences numériques.<br>
-					Nous introduisons des expériences numériques, dans des monuments historiques, grâce à de la réalité augmentée. Nous avons décidé de travailler avec la technologie de la RA pour mettre en valeur l'existant. <br>En effet, nous avons conscience que chaque lieu doit garder son âme et ne doit pas se faire submerger par la technologie.
+					<p class="test4_title" style="font-weight: bold; font-family: 'Montserrat', sans-serif; font-size: 1.3em;"><br>Visionae est une <b style="color: white; font-size: 1em;">startup de création d’expériences numériques.</b><br>
+					Nous introduisons des expériences numériques,<br> dans des monuments historiques, grâce<br> à de la réalité augmentée.<br>
+					 Nous avons décidé de travailler avec la technologie de la RA pour mettre en valeur l'existant. <br>En effet, nous avons conscience que chaque lieu doit garder son âme et ne doit pas se faire submerger par la technologie.
 					</p>
 				</div>
 			</div>
