--- a/Visio_empty.html
+++ b/Visio_empty.html
@@ -11,10 +11,11 @@
         <link rel="stylesheet" href="visio.css">
 	</head>
 	<body>
-        <!-- Main -->
+
+        <!-- Header -->
+
         <div class="parallax" data-parallax="scroll" data-position="top" data-bleed="10" data-image-src="https://media.giphy.com/media/3o7TKoYwWhxyeh8kvu/giphy.gif">
             <div class="main">
-                <!-- Header -->
                 <img style="position: absolute; width: 10%; left: 5%; top: 2%;" src="main_logo.png"/>
                 <div style="position: absolute; left: 50%; top: 50%; transform: translate(-50%,-50%);" >
                     <h1 class="fade_up">L’EXPERIENCE NUMERIQUE AU COEUR DE VOTRE REALITE</h1>
@@ -30,96 +31,94 @@
             </div>
         </div>
 
-        <!-- Savoir Faire -->
+        <!-- Contenu -->
+
         <div class="content-wrapper">
-                <div class="content">
-                    <h1 class="tl_1" style="margin-top: 50px;">METHODES</h1>
-                    <div class='some-page-wrapper'>
-                        <div class='row'>
+            <div class="content">
+                <h1 class="tl_1">METHODES</h1>
+                <div class='some-page-wrapper'> 
+                    <div class='row'>
                         <div class='column'>
-                            <div class='blue-column'>
-                                <img style= "width: 50%; margin-bottom: 10%;"src="imaginer.gif">
-                                <h1 style="font-size: 2vw; font-weight: 900; width: 50%; margin: 0 auto; text-align: left; margin-bottom: 4%;">Imaginer</h1>
-                            <p style="width: 50%; margin: 0 auto; text-align: left;"> Ensemble, nous conceptualisons vos idées et vos envies, pour une exposition la plus adaptée possible.</p>
-                            </div>
+                            <img style= "width: 50%; margin: 0 auto;"src="imaginer.gif">
+                            <h1 class="columns_text">Imaginer</h1>
+                            <p style="width: 50%; margin: 0 auto; text-align: left; font-weight: 600;"> Ensemble, nous conceptualisons vos idées et vos envies, pour une exposition la plus adaptée possible.</p>
                         </div>
                         <div class='column'>
-                            <div class='green-column'>
-                                <img style= "width: 50%;  margin-bottom: 10%;"src="../V-empty.jpg">
-                                <h1 style="font-size: 2vw; font-weight: 900; width: 50%; margin: 0 auto; text-align: left; margin-bottom: 4%;">Produire</h1>
-                                <p style="width: 50%; margin: 0 auto; text-align: left; ">En collaboration avec les artistes, nous scénarisons et créons des œuvres uniques.</p>
-                            </div>
+                            <img style= "width: 50%; margin: 0 auto;"src="../V-empty.jpg">
+                            <h1 class="columns_text">Produire</h1>
+                            <p style="width: 50%; margin: 0 auto; text-align: left; font-weight: 600; ">En collaboration avec les artistes, nous scénarisons et créons des œuvres uniques.</p>
                         </div>
                         <div class='column'>
-                            <div class='orange-column'>
-                                <img style= "width: 50%;  margin-bottom: 10%;"src="../V-empty.jpg">
-                                <h1 style="font-size: 2vw; font-weight: 900; width: 50%; margin: 0 auto; text-align: left; margin-bottom: 4%;">Déployer</h1>
-                            <p style="width: 50%; margin: 0 auto; text-align: left; "> Nous nous occupons de la mise en œuvre technique de l’exposition une fois sur place.</p>
-                            </div>
+                            <img style= "width: 50%; margin: 0 auto;"src="../V-empty.jpg">
+                            <h1 class="columns_text">Déployer</h1>
+                            <p style="width: 50%; margin: 0 auto; text-align: left; font-weight: 600; "> Nous nous occupons de la mise en œuvre technique de l’exposition une fois sur place.</p>
                         </div>
-                        </div>
-                    </div>
-                  </div>
-                <div class="content2">
-                    <div class="little_animation">
-                        <h1 class="tl_2" >OFFRES</h1>
-                        <p class="layer3" style="margin: 0 auto; text-align: justify; width: 50%;color: white; font-size: 1.8vw; font-family: 'Oswald', sans-serif; font-weight: 900;" >Visionae est une startup de création d’expériences numériques.<br>
-                            Nous introduisons des expériences numériques, dans des monuments historiques, grâce à de la réalité augmentée.
-                            Nous avons décidé de travailler avec la technologie de la RA pour mettre en valeur l'existant.
-                            <br>En effet, nous avons conscience que chaque lieu doit garder son âme et ne doit pas se faire submerger par la technologie.
-                        </p>
                     </div>
                 </div>
             </div>
+            <div class="content2">
+                <div class="little_animation">
+                    <h1 class="tl_2">OFFRES</h1>
+                    <p class="layer3" style="margin: 0 auto; text-align: justify; width: 50%;color: white; font-size: 1.8vw; font-family: 'Oswald', sans-serif; font-weight: 900;" >Visionae est une startup de création d’expériences numériques.<br>
+                        Nous introduisons des expériences numériques, dans des monuments historiques, grâce à de la réalité augmentée.
+                        Nous avons décidé de travailler avec la technologie de la RA pour mettre en valeur l'existant.
+                        <br>En effet, nous avons conscience que chaque lieu doit garder son âme et ne doit pas se faire submerger par la technologie.
+                    </p>
+                </div>
+            </div>
+        </div>
 
         <!-- Break --> 
-        <div class="parallax" data-parallax="scroll" data-position="top" data-speed="0" data-image-src="https://media.giphy.com/media/3o7TKoYwWhxyeh8kvu/giphy.gif" style="max-height: 300px;">
 
-        </div>
+        <div class="parallax" data-parallax="scroll" data-position="top" data-speed="0" data-image-src="https://media.giphy.com/media/3o7TKoYwWhxyeh8kvu/giphy.gif" style="max-height: 300px;"></div>
+
         <!-- Contact -->
+
         <div class="contact" style="width: 100%; background: #0f0f0f; left: 0;top: 0;">
            <h1 class="tl_1" style="margin-top: 50px;">TEAM</h1>
             <div class='some-page-wrapper'>
-                    <div class='row2'>
-                      <div class='column'>
-                            <div class="textWithBlurredBg">
-                                <img src="V-Sau.jpg">
-                                <h1>Diwali</h1>
-                                <h3>With Lights</h3>
-                            </div>
-                      </div>
-                      <div class='column'>
-                            <div class="textWithBlurredBg">
-                                <img src="V-ade.jpg">
-                                <h1>Diwali</h1>
-                                <h3>With Lights</h3>
-                            </div>
-                      </div>
-                      <div class='column'>
-                            <div class="textWithBlurredBg">
-                                <img src="V-clem.jpg">
-                                <h1>Diwali</h1>
-                                <h3>With Lights</h3>
-                            </div>
-                        </div>
-                        <div class='column'>
-                                <div class="textWithBlurredBg">
-                                    <img src="V-empty.jpg">
-                                    <h1>Diwali</h1>
-                                    <h3>With Lights</h3>
-                                </div>
-                        </div>                       
-                        <div class='column'>
-                            <div class="textWithBlurredBg">
-                                <img src="V-empty.jpg">
-                                <h1>Diwali</h1>
-                                <h3>With Lights</h3>
-                            </div>
+                <div class='row2'>
+                    <div class='column'>
+                        <div class="textWithBlurredBg">
+                            <img src="V-Sau.jpg">
+                            <h1>Diwali</h1>
+                            <h3>With Lights</h3>
                         </div>
                     </div>
+                    <div class='column'>
+                        <div class="textWithBlurredBg">
+                            <img src="V-ade.jpg">
+                            <h1>Diwali</h1>
+                            <h3>With Lights</h3>
+                         </div>
+                    </div>
+                    <div class='column'>
+                        <div class="textWithBlurredBg">
+                            <img src="V-clem.jpg">
+                            <h1>Diwali</h1>
+                            <h3>With Lights</h3>
+                        </div>
+                    </div>
+                    <div class='column'>
+                        <div class="textWithBlurredBg">
+                            <img src="V-empty.jpg">
+                            <h1>Diwali</h1>
+                            <h3>With Lights</h3>
+                            </div>
+                    </div>                       
+                    <div class='column'>
+                        <div class="textWithBlurredBg">
+                            <img src="V-empty.jpg">
+                            <h1>Diwali</h1>
+                            <h3>With Lights</h3>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+
         <!-- Footer -->
+
         <div class="footer" style="width: 100%;  background: black; left: 0;top: 0;">
             <p style="color:white;position: relative;
             top: 50%;
