le titre ne se superpose plus avec le texte

--- a/Visio_empty.html
+++ b/Visio_empty.html
@@ -22,7 +22,7 @@
                 </div>
                 <br>
                 <div class="fade_down">
-                    <p style=" color: black; font-size: 1.4vw; font-family: 'Oswald', sans-serif; font-weight: 900;" >Visionae est une startup de création d’expériences numériques.<br>
+                    <p style=" color: black; font-family: 'Helvetica', sans-serif; font-weight: 900;" >Visionae est une startup de création d’expériences numériques.<br>
                         Nous introduisons des expériences numériques, dans des monuments historiques, grâce à de la réalité augmentée.
                         Nous avons décidé de travailler avec la technologie de la RA pour mettre en valeur l'existant.
                         <br>En effet, nous avons conscience que chaque lieu doit garder son âme et ne doit pas se faire submerger par la technologie.
