le titre ne se superpose plus avec le texte en mieux

--- a/Visio_empty.html
+++ b/Visio_empty.html
@@ -22,7 +22,7 @@
                 </div>
                 <br>
                 <div class="fade_down">
-                    <p style=" color: black; font-family: 'Helvetica', sans-serif; font-weight: 900;" >Visionae est une startup de création d’expériences numériques.<br>
+                    <p style=" color: black; font-family: 'Helvetica', sans-serif; font-weight: 900; text-transform: uppercase;" >Visionae est une startup de création d’expériences numériques.<br>
                         Nous introduisons des expériences numériques, dans des monuments historiques, grâce à de la réalité augmentée.
                         Nous avons décidé de travailler avec la technologie de la RA pour mettre en valeur l'existant.
                         <br>En effet, nous avons conscience que chaque lieu doit garder son âme et ne doit pas se faire submerger par la technologie.
@@ -76,7 +76,7 @@
 
         <div class="contact" style="width: 100%; background: #0f0f0f; left: 0;top: 0;">
            <h1 class="tl_1" style="margin-top: 50px;">TEAM</h1>
-            <div class='some-page-wrapper'>
+            <div class='some-page-wrapper2'>
                 <div class='row2'>
                     <div class='column'>
                         <div class="textWithBlurredBg">
