un peu de menage

--- a/Visio_empty.html
+++ b/Visio_empty.html
@@ -18,7 +18,7 @@
 
     <div class="parallax" data-parallax="scroll" data-position="top" data-bleed="10" data-image-src="https://media.giphy.com/media/3o7TKoYwWhxyeh8kvu/giphy.gif">
         <div class="main">
-            <img style="position: absolute; width: 10%; left: 5%; top: 2%;" src="main_logo.png" />
+            <img style="position: absolute; width: 10%; left: 5%; top: 2%;" src="img/main_logo.png" />
             <div style="position: absolute; left: 50%; top: 50%; transform: translate(-50%,-50%);">
                 <h1 class="fade_up">L’EXPERIENCE NUMERIQUE AU COEUR DE VOTRE REALITE</h1>
             </div>
@@ -40,17 +40,17 @@
             <div class='some-page-wrapper'>
                 <div class='row'>
                     <div class='column'>
-                        <img style="width: 50%; margin: 0 auto;" src="imaginer.gif">
+                        <img style="width: 50%; margin: 0 auto;" src="img/imaginer.gif">
                         <h1 class="columns_text">Imaginer</h1>
                         <p style="width: 50%; margin: 0 auto; text-align: left; font-weight: 600;"> Ensemble, nous conceptualisons vos idées et vos envies, pour une exposition la plus adaptée possible.</p>
                     </div>
                     <div class='column'>
-                        <img style="width: 50%; margin: 0 auto;" src="../V-empty.jpg">
+                        <img style="width: 50%; margin: 0 auto;" src="img/V-empty.jpg">
                         <h1 class="columns_text">Produire</h1>
                         <p style="width: 50%; margin: 0 auto; text-align: left; font-weight: 600; ">En collaboration avec les artistes, nous scénarisons et créons des œuvres uniques.</p>
                     </div>
                     <div class='column'>
-                        <img style="width: 50%; margin: 0 auto;" src="../V-empty.jpg">
+                        <img style="width: 50%; margin: 0 auto;" src="img/V-empty.jpg">
                         <h1 class="columns_text">Déployer</h1>
                         <p style="width: 50%; margin: 0 auto; text-align: left; font-weight: 600; "> Nous nous occupons de la mise en œuvre technique de l’exposition une fois sur place.</p>
                     </div>
@@ -60,7 +60,7 @@
         <div class="content2">
             <div class="little_animation">
                 <h1 class="tl_2">OFFRES</h1>
-                <p class="layer3" style="margin: 0 auto; text-align: justify; width: 50%;color: white; font-size: 1.8vw; font-family: 'Oswald', sans-serif; font-weight: 900;">Visionae est une startup de création d’expériences numériques.<br> Nous introduisons des expériences numériques, dans des monuments historiques, grâce à de la réalité augmentée. Nous avons décidé de travailler avec la technologie de la
+                <p class="layer3" style="margin: 0 auto; text-align: justify; width: 50%;color: white; font-size: 1.8vw; font-family: 'Helvetica', sans-serif; font-weight: 900;">Visionae est une startup de création d’expériences numériques.<br> Nous introduisons des expériences numériques, dans des monuments historiques, grâce à de la réalité augmentée. Nous avons décidé de travailler avec la technologie de la
                     RA pour mettre en valeur l'existant.
                     <br>En effet, nous avons conscience que chaque lieu doit garder son âme et ne doit pas se faire submerger par la technologie.
                 </p>
@@ -80,35 +80,35 @@
             <div class='row2'>
                 <div class='column'>
                     <div class="textWithBlurredBg">
-                        <img src="V-Sau.jpg">
+                        <img src="img/V-Sau.jpg">
                         <h1>Diwali</h1>
                         <h3>With Lights</h3>
                     </div>
                 </div>
                 <div class='column'>
                     <div class="textWithBlurredBg">
-                        <img src="V-ade.jpg">
+                        <img src="img/V-ade.jpg">
                         <h1>Diwali</h1>
                         <h3>With Lights</h3>
                     </div>
                 </div>
                 <div class='column'>
                     <div class="textWithBlurredBg">
-                        <img src="V-clem.jpg">
+                        <img src="img/V-clem.jpg">
                         <h1>Diwali</h1>
                         <h3>With Lights</h3>
                     </div>
                 </div>
                 <div class='column'>
                     <div class="textWithBlurredBg">
-                        <img src="V-empty.jpg">
+                        <img src="img/V-empty.jpg">
                         <h1>Diwali</h1>
                         <h3>With Lights</h3>
                     </div>
                 </div>
                 <div class='column'>
                     <div class="textWithBlurredBg">
-                        <img src="V-empty.jpg">
+                        <img src="img/V-empty.jpg">
                         <h1>Diwali</h1>
                         <h3>With Lights</h3>
                     </div>
