adding Jules picture + little fix

--- a/Visio.html
+++ b/Visio.html
@@ -80,13 +80,6 @@
             <div class='row2'>
                 <div class='column'>
                     <div class="textWithBlurredBg">
-                        <img src="img/V-Sau.jpg">
-                        <h1>Diwali</h1>
-                        <h3>With Lights</h3>
-                    </div>
-                </div>
-                <div class='column'>
-                    <div class="textWithBlurredBg">
                         <img src="img/V-ade.jpg">
                         <h1>Diwali</h1>
                         <h3>With Lights</h3>
@@ -94,14 +87,21 @@
                 </div>
                 <div class='column'>
                     <div class="textWithBlurredBg">
-                        <img src="img/V-clem.jpg">
+                        <img src="img/V-Sau.jpg">
                         <h1>Diwali</h1>
                         <h3>With Lights</h3>
                     </div>
                 </div>
                 <div class='column'>
                     <div class="textWithBlurredBg">
-                        <img src="img/V-empty.jpg">
+                        <img src="img/V-jules.JPG">
+                        <h1>Diwali</h1>
+                        <h3>With Lights</h3>
+                    </div>
+                </div>
+                <div class='column'>
+                    <div class="textWithBlurredBg">
+                        <img src="img/V-clem.jpg">
                         <h1>Diwali</h1>
                         <h3>With Lights</h3>
                     </div>
